# tg-qso-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-push.yml  python-package.yml
config/: settings.json
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
tests/integration/qso_sources/: test_hamlog.py
tg_qso_bot/bot/: __init__.py  __main__.py  app.py  errors_handling.py  messages_log.py  messages_watchdog.py  reply_format.py
tg_qso_bot/bot/handlers/: __init__.py  delete_messages.py  request_qso.py
tg_qso_bot/models/: __init__.py  qso.py
tg_qso_bot/qso_sources/: exceptions.py  hamlog.py  source.py
tg_qso_bot/utils/: logging.py
