[tool.poetry]
name = "tg-qso-bot"
version = "1.3.0"
description = "Simple HAM helper bot written on Python"
authors = ["exepirit <you@example.com>"]
license = "MIT"
repository = "https://github.com/exepirit/tg-qso-bot"
readme = "README.md"

[tool.poetry.scripts]
tg-qso-bot = "tg_qso_bot.bot:main"

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^2.2.3"
beautifulsoup4 = "^4.9.1"
pyrogram = "^1.1.0"
requests = "^2.23.0"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest_mock = "^3.1.0"
black = "^19.10b0"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
